fix showpage on mobile, add actions to UpNext, fix date calc

--- a/tv-tracker/src/App.css
+++ b/tv-tracker/src/App.css
@@ -39,3 +39,9 @@
 .read-the-docs {
   color: #888;
 }
+
+@media (width < 40rem) {
+  .hide-small {
+    display: none;
+  }
+}
